--- a/index-ru.html
+++ b/index-ru.html
@@ -558,7 +558,34 @@
         class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0"
         style="scroll-padding-left: 1rem;">
 
-        <!-- Karte 1 -->
+
+
+<!-- Карта 1 -->
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">M5 — Эмоции на пределе</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          Ритм, публика, энергия — M5 стал настоящим взрывом!  
+          DJ Jonny не просто играл музыку — он передавал чувства и мгновенно чувствовал настроение зала.  
+          Два дня мурашек, настоящих связей и идеальных вайбов. Каждый бит попадал точно в цель —  
+          событие, которое останется в памяти надолго.
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Незабываемо</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Событие</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+        <!-- Karte 2 -->
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="KrallerAlm Leogang" class="w-full h-64 sm:h-80 object-cover" src="img/kralleralm.png" />
@@ -576,7 +603,7 @@
           </div>
         </div>
 
-        <!-- Karte 2 -->
+        <!-- Karte 3 -->
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
@@ -597,7 +624,7 @@
           </div>
         </div>
 
-        <!-- Karte 3 -->
+        <!-- Karte 4 -->
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="Schaumparty Die Bar" class="w-full h-64 sm:h-80 object-cover" src="img/schaumparty.png" />
@@ -615,24 +642,6 @@
           </div>
         </div>
 
-        <!-- Karte 4 -->
-        <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="Insider Zell am See" class="w-full h-64 sm:h-80 object-cover" src="img/insider.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">Insider – Цель-ам-Зее</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2"> Те, кто проводит выходные в Цель-ам-Зее, не могут пропустить «Insider». DJ Jonny регулярно радует посетителей отборными клубными битами и создает невероятную атмосферу на танцполе — от первого бокала до последнего трека. 
-          Обязательное место для всех ночных гуляк!</p>
-              </div>
-              <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#цельамзее</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#insider</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#клубнаяатмосфера</span>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!-- Karte 5 -->
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
