--- a/index.html
+++ b/index.html
@@ -553,9 +553,33 @@
         style="scroll-padding-left: 1rem;">
 
 
-
-
 <!-- Karte 1 -->
+
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">M5 – Emotionen auf Anschlag</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          Der Beat, die Menschen, die Energie – M5 war pure Ekstase! 
+          DJ Johnny hat nicht einfach aufgelegt, sondern das Publikum gelesen wie ein offenes Buch und mit jeder Nummer Emotionen serviert. 
+          Zwei Tage voller Gänsehaut, tiefer Verbindungen und perfekter Vibes. Jeder Beat saß, jede Songwahl ein Volltreffer – 
+          ein musikalisches Erlebnis, das noch lange nachklingt.
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Unvergesslich</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Event</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Karte 2 -->
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -574,7 +598,7 @@
           </div>
         </div>
 
-<!-- Karte 2 -->
+<!-- Karte 3 -->
 <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
   <div class="flex flex-col h-full">
     <img alt="Interspar Saalfelden" class="w-full h-64 sm:h-80 object-cover" src="img/interspar.jpeg" />
@@ -597,7 +621,7 @@
 </div>
 
 
-        <!-- Karte 3 -->
+        <!-- Karte 4 -->
         <div class="flex-shrink-0 w-full max-w-[90vw]
  sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -611,26 +635,6 @@
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#schaumparty</span>
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#diebar</span>
                 <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#mallevibes</span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Karte 4 -->
-        <div class="flex-shrink-0 w-full max-w-[90vw]
- sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="Insider Zell am See" class="w-full h-64 sm:h-80 object-cover" src="img/insider.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">Insider – Zell am See</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2"> Wer das Wochenende in Zell am See verbringt, kommt am „Insider“ nicht vorbei. DJ Jonny liefert hier regelmäßig feinste Clubbeats und sorgt für ausgelassene Stimmung auf der Tanzfläche – vom ersten Drink bis zur letzten Nummer. 
-          Ein echter Pflichttermin für Nachtschwärmer!</p>
-              </div>
-        <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#zellamsee</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#insider</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#clubvibes</span>
               </div>
             </div>
           </div>
