--- a/references-zh.html
+++ b/references-zh.html
@@ -116,6 +116,27 @@
 <section class="bg-white border-b py-8">
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <div class="column_1">
+
+<!-- M5——情绪炸裂之夜 -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/m5.jpg" alt="M5 活动" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">M5——情绪炸裂之夜</h3>
+    <p class="text-gray-700 text-base">
+      节奏、氛围与能量交织成一场难以忘怀的 M5 音乐盛典。  
+      DJ Jonny 不只是放歌，他精准捕捉全场情绪，用每一段旋律传递情感与共鸣。  
+      两天的心动时刻，现场高潮不断，每一首歌都击中灵魂深处。  
+      这不仅是一场派对，更是一段音乐记忆，将在人们心中久久回响。
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#M5Magic</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#难忘之夜</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#活动现场</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#ALLIN</span>
+  </div>
+</div>
+
       
       <!-- KrallerAlm Leogang -->
       <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
