--- a/index-en.html
+++ b/index-en.html
@@ -524,6 +524,30 @@
 
       <div id="references-cards" class="flex snap-x snap-mandatory gap-4 px-4 sm:grid sm:grid-cols-2 lg:grid-cols-3 overflow-x-auto sm:overflow-visible scroll-smooth min-w-0" style="scroll-padding-left: 1rem;">
 
+
+<div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
+  <div class="flex flex-col h-full">
+    <img alt="M5 Event" class="w-full h-64 sm:h-80 object-cover" src="img/m5.jpg" />
+    <div class="flex flex-col justify-between h-full">
+      <div class="px-6 py-4">
+        <h3 class="text-lg sm:text-2xl">M5 – Emotions in Overdrive</h3>
+        <p class="text-gray-700 text-sm sm:text-base mt-2">
+          The beats, the crowd, the energy – M5 was pure ecstasy!  
+          DJ Jonny didn’t just play music – he delivered raw emotion and read the room like an open book.  
+          Two days of goosebumps, deep connections, and perfect vibes. Every beat hit, every track felt just right –  
+          an experience that keeps echoing long after the final drop.
+        </p>
+      </div>
+      <div class="px-6 py-4 flex flex-wrap gap-2">
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Unforgettable</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Event</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
+      </div>
+    </div>
+  </div>
+</div>
+
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
             <img alt="KrallerAlm Leogang" class="w-full h-64 sm:h-80 object-cover" src="img/kralleralm.png" />
@@ -540,6 +564,7 @@
             </div>
           </div>
         </div>
+
 
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
@@ -576,22 +601,6 @@
           </div>
         </div>
 
-        <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
-          <div class="flex flex-col h-full">
-            <img alt="Insider Zell am See" class="w-full h-64 sm:h-80 object-cover" src="img/insider.jpeg" />
-            <div class="flex flex-col justify-between h-full">
-              <div class="px-6 py-4">
-                <h3 class="text-lg sm:text-2xl">Insider – Zell am See</h3>
-                <p class="text-gray-700 text-sm sm:text-base mt-2">Spending the weekend in Zell am See? Then you know the “Insider”. DJ Jonny delivers top-tier club beats and nonstop vibes from the first drink to the last track – a must for night owls!</p>
-              </div>
-              <div class="px-6 py-4 flex flex-wrap gap-2">
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#zellamsee</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#insider</span>
-                <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#clubvibes</span>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="flex-shrink-0 w-full max-w-[90vw] sm:w-auto snap-start bg-white rounded-xl shadow-lg overflow-hidden mb-4">
           <div class="flex flex-col h-full">
