--- a/references-ru.html
+++ b/references-ru.html
@@ -128,6 +128,28 @@
 <section class="bg-white border-b py-8">
   <div class="container max-w-5xl mx-auto m-8" data-aos="fade-left">
     <div class="column_1">
+
+<!-- M5 -->
+<div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
+  <img class="w-full h-64 object-cover" src="img/m5.jpg" alt="M5 Event" />
+  <div class="px-6 py-4">
+    <h3 class="text-2xl">M5 — Эмоции на пределе</h3>
+    <p class="text-gray-700 text-base">
+      Ритмы, люди, атмосфера — M5 стал настоящей энергетической вспышкой.  
+      DJ Jonny не просто крутил треки — он читал публику как открытую книгу и передавал каждую эмоцию через музыку.  
+      За два дня он создал музыкальное путешествие, полное мурашек, искренних моментов и идеальной энергетики.  
+      Каждое попадание — точное, каждый трек — в самое сердце. Этот вечер останется с вами надолго.
+    </p>
+  </div>
+  <div class="px-6 py-4">
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#M5Magic</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#Незабываемо</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#Событие</span>
+    <span class="tag-line bg-gray-200 rounded-full px-3 py-0.5 text-sm text-gray-700">#ALLIN</span>
+  </div>
+</div>
+
+
       
       <!-- KrallerAlm Leogang -->
       <div class="max-w rounded-xl overflow-hidden shadow-lg bg-white mb-4" data-aos="fade-right">
