--- a/index.html
+++ b/index.html
@@ -570,8 +570,8 @@
       </div>
       <div class="px-6 py-4 flex flex-wrap gap-2">
         <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#M5Magic</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Unvergesslich</span>
-        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#Event</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#unvergesslich</span>
+        <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#event</span>
         <span class="tag-line bg-gray-200 rounded-full px-3 py-1 text-xs text-gray-700">#ALLIN</span>
       </div>
     </div>
