--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         <h3 class="text-lg sm:text-2xl">M5 – Emotionen auf Anschlag</h3>
         <p class="text-gray-700 text-sm sm:text-base mt-2">
           Der Beat, die Menschen, die Energie – M5 war pure Ekstase! 
-          DJ Jossnny hat nicht einfach aufgelegt, sondern das Publikum gelesen wie ein offenes Buch und mit jeder Nummer Emotionen serviert. 
+          DJ Jonny hat nicht einfach aufgelegt, sondern das Publikum gelesen wie ein offenes Buch und mit jeder Nummer Emotionen serviert. 
           Zwei Tage voller Gänsehaut, tiefer Verbindungen und perfekter Vibes. Jeder Beat saß, jede Songwahl ein Volltreffer – 
           ein musikalisches Erlebnis, das noch lange nachklingt.
         </p>
